--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="wrapper">
       <header>
         <h1>Homunculus</h1>
-        <p>homunculus</p>
+        <p>Engineering Biology</p>
 
         <p class="view"><a href="https://github.com/carlcrott/homunculus">View the Project on GitHub <small>carlcrott/homunculus</small></a></p>
 
